<?xml version="1.0"?>
<package format="2">
  <name>apsrc_udp_rosbridge</name>
  <description>APSRC centerlized UDP communication core and nodes</description>
  <version>1.0.0</version>
  <author email="mbahramg@mtu.edu">Mojtaba Bahramgiri</author>
  <maintainer email="mbahramg@mtu.edu">Mojtaba Bahramgiri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>autoware_msgs</depend>
  <depend>apsrc_msgs</depend>
  <depend>network_interface</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>roslint</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
